Fix Gap

--- a/src/App.css
+++ b/src/App.css
@@ -7,18 +7,6 @@
   font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
 
-/* .home,
-.reports,
-.products {
-  background: #a1b88d;
-  color: #445942;  
-  display: flex;
-  height: 90vh;
-  align-items: center;
-  justify-content: center;
-  font-size: 3rem;
-} */
-
 /* Top Ssection with Hambuger */
 .navbar {
   background-color: #445942;
@@ -27,7 +15,7 @@
   align-items: center;
   height: auto;
 }
-
+ /* The X */
 .menu-bars {
   background: none;
   color: #dad2ba;
@@ -57,6 +45,7 @@
   transition: 450ms;
 }
 
+/* Sidebar 😺🐶🦊 */
 .nav-text {
   background: none;
   display: flex;
@@ -65,15 +54,6 @@
   align-items: center;
   padding: 0;
   height: 50px;
-  /*
-  background: red;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  padding: 8px 0px 8px 16px;
-  list-style: none;
-  height: 60px;
-  */
 }
 
 .nav-text a {
@@ -93,6 +73,7 @@
   color: #fff;
 }
 
+/* The X */
 .nav-menu-items {
   width: 100%;
 }
@@ -110,16 +91,16 @@
   font-weight: bolder;
 }
 
-span {
+/* span {
   margin-left: 16px;
   font-weight: bold;
-}
+} */
 
 /* KC */
 main {
   background: #a1b88d;
   min-height: 100vh;
-  margin-top: 0;
+/*   margin-top: 0; */
   padding: 10px 0 50px 0;
   gap: 10px;  
   display: flex;
@@ -136,6 +117,7 @@ button {
   padding: 5px;
   font-size: xx-large;
   font-weight: bold;
+  border-radius: 10px;
 }
 
 button:hover {
@@ -152,11 +134,11 @@ img {
 .a {    
   background: #445942;
   text-align: center;
-  bottom: 0;
-  padding: 10px;
-  margin: 0;
   width: 100%;
+  margin: 0;
+  padding: 10px;
   position: absolute;
+  bottom: 0;
 }
 
 main a {
